--- a/config/i3/config
+++ b/config/i3/config
@@ -14,6 +14,7 @@
 # $mod+d
 # $mod+w
 # $mod+Shift+q
+# $mod+Return
 # bar
 
 # 視窗設定
@@ -66,6 +67,9 @@ exec_always --no-startup-id $HOME/polybar-collection/launch.sh
 bindsym $mod+Shift+x kill
 bindsym $mod+Caps_Lock workspace next
 bindsym $mod+Tab workspace prev
+
+# 更改啟動 Terminal 的按鍵
+bindsym $mod+Return exec kitty -o background_opacity=0.8
 
 # 調整音量
 bindsym $mod+F10 exec pactl set-sink-mute @DEFAULT_SINK@ toggle # Mute
